March 27, 2023
--------------

Modifications for AOO:

    - Use <stdint.h> for integer types to make the code work on non-Intel platforms.

    - Fix undefined behavior when serializing empty blobs


April 9, 2013
-------------

Changes for the 1.1.0 release (vs 1.0.2) are listed below. Unless
otherwise indicated these changes have been made since 
January 2013. The focus has been on general clean-up, fixing bugs,
compiler errors and warnings, and fixing issues on 64 bit platforms. 
A few improvements such as support for OSC arrays, functions
for setting broadcast and reuse socket options have been added.
This update merges changes from the openFrameworks version 
of oscpack.

    - Added support for arrays in messages (see OscUnitTests.cpp 
    for example usage). (patch thanks to Tim Blechmann)
    
    - Fixed bugs relating to 64 bit usage (e.g. crashes in 64 bit 
    builds on OS X).
   	
    - Some member functions that previously used the "int" or
    "unsigned long" type for parameters or return values now use 
    std::size_t (platform-defined) or 
    osc_bundle_element_size_t (a.k.a. int32).   
    This change  was made to better support 64 bit platforms.
    See SVN revision 70 for details.
    
    - The previous point introduces a breaking change on Linux/x86_64
    for callers of AsBlob() and AsBlobUnchecked():
    The type of the second argument (the "size" argument) to
    ReceivedMessageArgument::AsBlob() and 
    ReceivedMessageArgument::AsBlobUnchecked() has changed
    from unsigned long & to osc_bundle_element_size_t (an int32). 
    You should declare your size argument variables as 
    osc_bundle_element_size_t to avoid incompatibilities between 
    32 and 64 bit builds.

    - Note that oscpack does not support packets larger than
    0x7FFFFFFC (see comments in class ReceivedPacket for
    details).
    
    - Oscpack defines an osc::Nil value used for sending the nil 
    message argument value. This conflicts with Objective-C. 